[spreadsheet] changed the ownership of SpreadsheetModel  -  make Spreadsheet owning it and not SpreadsheetView,  to make sure spreadsheet's children columns are not deleted when the view is closed and the model is deleted.

BUG: 452053
FIXED-IN: 2.9